--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
+
+@media (max-width:740px) {
+  .active p{
+    @apply text-white bg-[#5f6FFF]
+  }
+}
